--- a/Exploration/Ex06/news_summarize_project.ipynb
+++ b/Exploration/Ex06/news_summarize_project.ipynb
@@ -2811,8 +2811,8 @@
     "    print(\"원문 :\", seq2text(encoder_input_test[i]))\n",
     "    print(\"실제 요약 :\", seq2summary(decoder_input_test[i]))\n",
     "    print(\"예측 요약 :\", decode_sequence(encoder_input_test[i].reshape(1, text_max_len)))\n",
-    "    print(\"실제 요약 :\", subset_data['summary_ratio'][i])\n",
-    "    print(\"실제 요약 :\", subset_data['summary_words'][i])\n",
+    "    print(\"sum ratio 요약 :\", subset_data['summary_ratio'][i])\n",
+    "    print(\"sum words 요약 :\", subset_data['summary_words'][i])\n",
     "    print(\"\\n\")"
    ]
   },
@@ -2827,7 +2827,7 @@
     "\n",
     "###  - 약간의 파라미터 수정\n",
     "\n",
-    "###  - ROUGE 평가지표 사용 - 시간 부족으로 100개만 비교"
+    "###  - ROUGE 평가지표 사용 - 시간 부족으로 500개만 비교"
    ]
   },
   {
